--- a/code-signer/action.yml
+++ b/code-signer/action.yml
@@ -68,10 +68,13 @@ runs:
         # Clean-up
         rm -rf JahiaReleaseTool
         rm -rf CodeSignTool.zip
-    - name: Output key and certificate information
+    - name: Output CodeSignTool information
       shell: bash
       working-directory: CodeSignTool
       run: |
+        echo "CodeSignTool version:"
+        ./CodeSignTool.sh --version
+        echo "Key and certificate information:"
         ./CodeSignTool.sh credential_info -credential_id="${{ inputs.credential_id }}" -username="${{ inputs.signer_username }}" -password=${{ inputs.signer_password }}
     - name: Generate signed installer files
       shell: bash
