--- a/.github/workflows/prs-chores.yml
+++ b/.github/workflows/prs-chores.yml
@@ -11,4 +11,4 @@ jobs:
     steps:
       - uses: amannn/action-semantic-pull-request@v5
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_JAHIACI_ISSUES_CHORES }}
+          GITHUB_TOKEN: ${{ secrets.GH_API_TOKEN }}
