--- a/.github/workflows/prs-chores.yml
+++ b/.github/workflows/prs-chores.yml
@@ -10,6 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: amannn/action-semantic-pull-request@v5
+        id: lint_pr_title
         env:
           GITHUB_TOKEN: ${{ secrets.GH_API_TOKEN }}
 
