--- a/.github/workflows/prs-chores.yml
+++ b/.github/workflows/prs-chores.yml
@@ -4,6 +4,10 @@ name: PRs Chores
 on:
   workflow_call:
 
+permissions:
+  pull-requests: write
+  contents: read
+
 jobs:
   lint-pr-title:
     name: Lint PR Title
