--- a/.github/workflows/prs-chores.yml
+++ b/.github/workflows/prs-chores.yml
@@ -12,14 +12,14 @@ jobs:
       - uses: amannn/action-semantic-pull-request@v5
         id: lint_pr_title
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_API_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_ISSUES_PRS_CHORES }}
 
       # When the previous steps fails, the workflow would stop. By adding this
       # condition you can continue the execution with the populated error message.          
       - uses: marocchino/sticky-pull-request-comment@v2
         if: always() && (steps.lint_pr_title.outputs.error_message != null)
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_API_TOKEN }}        
+          GITHUB_TOKEN: ${{ secrets.GH_ISSUES_PRS_CHORES }}        
         with:
           header: pr-title-lint-error
           message: |
@@ -39,7 +39,7 @@ jobs:
       - if: ${{ steps.lint_pr_title.outputs.error_message == null }}
         uses: marocchino/sticky-pull-request-comment@v2
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_API_TOKEN }}        
+          GITHUB_TOKEN: ${{ secrets.GH_ISSUES_PRS_CHORES }}        
         with:   
           header: pr-title-lint-error
           delete: true
