--- a/.github/workflows/prs-chores.yml
+++ b/.github/workflows/prs-chores.yml
@@ -33,6 +33,18 @@ jobs:
             ${{ steps.lint_pr_title.outputs.error_message }}
             ```
 
+            Sample valid messages:
+
+            A PR introducing a breaking change(!)
+            ```
+            feat!: send an email to the customer when a product is shipped
+            ```
+
+            A regular commit
+            ```
+            docs: correct spelling of CHANGELOG
+            ```
+
             This message will be deleted once the PR title conforms with the convention.
 
       # Delete a previous comment when the issue has been resolved
