--- a/.github/workflows/prs-chores.yml
+++ b/.github/workflows/prs-chores.yml
@@ -49,7 +49,7 @@ jobs:
             docs: correct spelling of CHANGELOG
             ```
 
-            This message will be deleted once the PR title conforms with the convention.
+            _This message will be deleted once the PR title conforms with the convention._
 
       # Delete a previous comment when the issue has been resolved
       - if: ${{ steps.lint_pr_title.outputs.error_message == null }}
