--- a/code-signer/action.yml
+++ b/code-signer/action.yml
@@ -72,10 +72,18 @@ runs:
       with:
         distribution: 'temurin'
         java-version: '11'
+    - name: Output CodeSignTool information
+      shell: bash
+      working-directory: CodeSignTool
+      run: |
+        echo "CodeSignTool version:"
+        ./CodeSignTool.sh --version
+        echo "Key and certificate information:"
+        ./CodeSignTool.sh credential_info -credential_id="${{ inputs.credential_id }}" -username="${{ inputs.signer_username }}" -password=${{ inputs.signer_password }}
     - name: Generate signed installer files
       shell: bash
+      working-directory: CodeSignTool
       run: |
-        cd CodeSignTool
         export OUTPUT_DIR=/tmp/signed-installers
         mkdir $OUTPUT_DIR
         # sign installer jars
