--- a/.github/workflows/issues-chores.yml
+++ b/.github/workflows/issues-chores.yml
@@ -25,14 +25,14 @@ jobs:
         with:
           project-url: https://github.com/orgs/Jahia/projects/13
           github-token: ${{ secrets.GH_JAHIACI_ISSUES_CHORES }}
-          labeled: needs-triage
+          labeled: need-triage
 
       - name: Attach customers to the Customers project
         uses: actions/add-to-project@v1.0.2
         with:
           project-url: https://github.com/orgs/Jahia/projects/24
           github-token: ${{ secrets.GH_JAHIACI_ISSUES_CHORES }}
-          labeled: customers
+          labeled: customer
 
       # Add all tickets of Type "Epic" and label "Area:" to the global roadmap project
       - name: Attach all Epics to the Roadmap - Global project
