--- a/.github/workflows/issues-chores.yml
+++ b/.github/workflows/issues-chores.yml
@@ -24,14 +24,14 @@ jobs:
         uses: actions/add-to-project@v1.0.2
         with:
           project-url: https://github.com/orgs/Jahia/projects/13
-          github-token: ${{ secrets.GH_JAHIACI_ISSUES_CHORES }}
+          github-token: ${{ secrets.GH_ISSUES_PRS_CHORES }}
           labeled: need-triage
 
       - name: Attach customers to the Customers project
         uses: actions/add-to-project@v1.0.2
         with:
           project-url: https://github.com/orgs/Jahia/projects/24
-          github-token: ${{ secrets.GH_JAHIACI_ISSUES_CHORES }}
+          github-token: ${{ secrets.GH_ISSUES_PRS_CHORES }}
           labeled: customer
 
       # Add all tickets of Type "Epic" and label "Area:" to the global roadmap project
@@ -40,7 +40,7 @@ jobs:
         if: ${{ steps.get-issue-type.outputs.result == 'Epic' }}
         with:
           project-url: https://github.com/orgs/Jahia/projects/18
-          github-token: ${{ secrets.GH_JAHIACI_ISSUES_CHORES }}
+          github-token: ${{ secrets.GH_ISSUES_PRS_CHORES }}
           labeled: Area:Product, Area:Delivery, Area:Tech, Area:QA, Area:Security
           label-operator: OR
 
@@ -48,28 +48,28 @@ jobs:
         uses: actions/add-to-project@v1.0.2
         with:
           project-url: https://github.com/orgs/Jahia/projects/21
-          github-token: ${{ secrets.GH_JAHIACI_ISSUES_CHORES }}
+          github-token: ${{ secrets.GH_ISSUES_PRS_CHORES }}
           labeled: Area:QA
 
       - name: Attach all tickets with label Area:QA to the Security Roadmap Project
         uses: actions/add-to-project@v1.0.2
         with:
           project-url: https://github.com/orgs/Jahia/projects/22
-          github-token: ${{ secrets.GH_JAHIACI_ISSUES_CHORES }}
+          github-token: ${{ secrets.GH_ISSUES_PRS_CHORES }}
           labeled: Area:Security
 
       - name: Attach all tickets with label Area:Tech to the Tech Roadmap Project
         uses: actions/add-to-project@v1.0.2
         with:
           project-url: https://github.com/orgs/Jahia/projects/23
-          github-token: ${{ secrets.GH_JAHIACI_ISSUES_CHORES }}
+          github-token: ${{ secrets.GH_ISSUES_PRS_CHORES }}
           labeled: Area:Tech
 
       - name: Attach all tickets with label Area:Delivery to the Delivery Roadmap Project
         uses: actions/add-to-project@v1.0.2
         with:
           project-url: https://github.com/orgs/Jahia/projects/12
-          github-token: ${{ secrets.GH_JAHIACI_ISSUES_CHORES }}
+          github-token: ${{ secrets.GH_ISSUES_PRS_CHORES }}
           labeled: Area:Delivery
 
   transfer:
@@ -101,7 +101,7 @@ jobs:
       - name: Transfer Issue & Create Stub
         uses: Fgerthoffert/transfer-issue-action@v1.0.0
         with:
-          token: ${{ secrets.GH_JAHIACI_ISSUES_CHORES }}        
+          token: ${{ secrets.GH_ISSUES_PRS_CHORES }}        
           router: "transfer:"
           create_labels_if_missing: true
           allow_private_public_transfer: true
@@ -117,7 +117,7 @@ jobs:
       - name: Create links to GitHub in Jira issues
         uses: Fgerthoffert/actions-create-jira-link@v1.0.0
         with:
-          token: ${{ secrets.GH_JAHIACI_ISSUES_CHORES }}
+          token: ${{ secrets.GH_ISSUES_PRS_CHORES }}
           jira_server_host: jira.jahia.org
           jira_server_username: ${{ secrets.JIRA_USERNAME }}
           jira_server_password: ${{ secrets.JIRA_PASSWORD }}
