--- a/.github/workflows/issues-chores.yml
+++ b/.github/workflows/issues-chores.yml
@@ -131,10 +131,10 @@ jobs:
       - name: Jira Security Issue Creation
         uses: bryannice/gitactions-jira-issue-creation@1.2.1
         env:
-          JIRA_ACCOUNT_URL: https://support.jahia.com/
-          JIRA_API_TOKEN: jiraApiToken
-          JIRA_ISSUE_DESCRIPTION: Demo'ing Jira Issue Creation
-          JIRA_ISSUE_SUMMARY: ${{ context.payload.issue }}
+          JIRA_ACCOUNT_URL: https://jira.jahia.org
+          JIRA_API_TOKEN: ${{ secrets.JIRA_TOKEN }}
+          JIRA_ISSUE_DESCRIPTION: ${{ context.payload.issue.body }}
+          JIRA_ISSUE_SUMMARY: ${{ context.payload.issue.title }}
           JIRA_ISSUE_TYPE: Vulnerability
-          JIRA_PROJECT: SECURITY
-          JIRA_USERNAME: security+jira@jahia.com
+          JIRA_PROJECT: SECBACKLOG
+          JIRA_USERNAME: mdechecchi@jahia.com
