--- a/.github/workflows/issues-chores.yml
+++ b/.github/workflows/issues-chores.yml
@@ -106,16 +106,23 @@ jobs:
           label-operator: AND
 
       - name: Jira Security Issue Creation
-        uses: bryannice/gitactions-jira-issue-creation@1.2.1
+        # Creates Jira issues specified via an input file (JSON)
         if: ${{ steps.new-security-incident.outputs.result == 'Epic' }}
-        env:
-          JIRA_ACCOUNT_URL: https://jira.jahia.org
-          JIRA_API_TOKEN: ${{ secrets.JIRA_TOKEN }}
-          JIRA_ISSUE_DESCRIPTION: ${{ context.payload.issue.body }}
-          JIRA_ISSUE_SUMMARY: ${{ context.payload.issue.title }}
-          JIRA_ISSUE_TYPE: Vulnerability
-          JIRA_PROJECT: SECBACKLOG
-          JIRA_USERNAME: mdechecchi@jahia.com
+        uses: rmeneely/create-jira-issues@v1
+        with:
+          input: jira_issues.json
+          url: https://jira.jahia.org
+          user_email: mdechecchi@jahia.com
+          api_token: ${{ secrets.JIRA_TOKEN }}
+        #uses: bryannice/gitactions-jira-issue-creation@1.2.1
+        #env:
+        #  JIRA_ACCOUNT_URL: https://jira.jahia.org
+        #  JIRA_API_TOKEN: ${{ secrets.JIRA_TOKEN }}
+        #  JIRA_ISSUE_DESCRIPTION: ${{ context.payload.issue.body }}
+        #  JIRA_ISSUE_SUMMARY: ${{ context.payload.issue.title }}
+        #  JIRA_ISSUE_TYPE: Vulnerability
+        #  JIRA_PROJECT: SECBACKLOG
+        #  JIRA_USERNAME: mdechecchi@jahia.com
 
       # https://github.com/orgs/Jahia/projects/22
       - name: Attach all tickets with label Area:QA to the Security Roadmap Project
