--- a/.github/workflows/issues-chores.yml
+++ b/.github/workflows/issues-chores.yml
@@ -108,19 +108,14 @@ jobs:
       - name: Jira Security Issue Creation
         # Creates Jira issues specified via an input file (JSON)
         if: ${{ steps.new-security-incident.outputs.itemId != '' }}
-        #uses: rmeneely/create-jira-issues@v1
-        #with:
-        #  input: jira_issues.json
-        #  url: https://jira.jahia.org
-        #  user_email: mdechecchi@jahia.com
-        #  api_token: ${{ secrets.JIRA_TOKEN }}
         uses: bryannice/gitactions-jira-issue-creation@1.2.1
         env:
           JIRA_ACCOUNT_URL: https://jira.jahia.org
           JIRA_API_TOKEN: ${{ secrets.JIRA_TOKEN }}
           JIRA_ISSUE_DESCRIPTION: ${{ context.payload.issue.body }}
-          JIRA_ISSUE_SUMMARY: ${{ context.payload.issue.title }}
-          JIRA_ISSUE_TYPE: Vulnerability
+          JIRA_ISSUE_SUMMARY: ${{ context.payload.issue.title }} (${{ steps.new-security-incident.outputs.itemId }})
+          JIRA_ISSUE_TYPE: Bug
+          #Vulnerability
           JIRA_PROJECT: SECBACKLOG
           JIRA_USERNAME: mdechecchi@jahia.com
 
