--- a/.github/workflows/issues-chores.yml
+++ b/.github/workflows/issues-chores.yml
@@ -61,8 +61,8 @@ jobs:
           label-operator: AND
 
       - name: Create a Security issue in the Support Jira
-        if: ${{ steps.new-security-incident.outputs.itemId != '' }}
         uses: bryannice/gitactions-jira-issue-creation@1.2.1
+        id: new-security-jira-ticket
         env:
           JIRA_ACCOUNT_URL: https://jira.jahia.org
           JIRA_API_TOKEN: ${{ secrets.JIRA_TOKEN }}
@@ -72,6 +72,42 @@ jobs:
           #Vulnerability
           JIRA_PROJECT: SECBACKLOG
           JIRA_USERNAME: ${{ secrets.JIRA_USERNAME }}
+
+      - name: Set security field
+        if: ${{ steps.new-security-incident.outputs.itemId != '' }}
+        env:
+          GH_TOKEN: ${{ secrets.GH_ISSUES_PRS_CHORES }}
+        run: |
+          gh api graphql -f query='
+            mutation (
+              $project: ID!
+              $item: ID!
+              $field: ID!
+              $field_value: String!
+            ) {
+              set_status: updateProjectV2ItemFieldValue(input: {
+                projectId: $project
+                itemId: $item
+                fieldId: $field
+                value: {
+                  singleSelectOptionId: $field_value
+                  }
+              }) {
+                projectV2Item {
+                  id
+                  }
+              }
+            }' -f project=$PROJECT_ID -f item=$ITEM_ID -f status_field="Jira ticket ID" -f status_value="${{ steps.new-security-jira-ticket.outputs.jira_issue_url }}" --silent
+
+
+
+
+      - uses: actions/IssueOutputAction@v1.0
+        with:
+          repotoken: ${{ secrets.GITHUB_TOKEN }}
+          searchquery: 'event hubs is:open'
+          repoOwnerAndName: 'Azure/azure-sdk-for-net'
+
 
       - name: Attach all tickets with label Area:Security to the Security Roadmap Project
         uses: actions/add-to-project@v1.0.2
@@ -144,3 +180,12 @@ jobs:
           jira_server_username: ${{ secrets.JIRA_USERNAME }}
           jira_server_password: ${{ secrets.JIRA_PASSWORD }}
           github_project_field: "Support tickets" 
+
+      - name: Create links to GitHub in Jira issues
+        uses: Fgerthoffert/actions-create-jira-link@v1.0.0
+        with:
+          token: ${{ secrets.GH_ISSUES_PRS_CHORES }}
+          jira_server_host: jira.jahia.org
+          jira_server_username: ${{ secrets.JIRA_USERNAME }}
+          jira_server_password: ${{ secrets.JIRA_PASSWORD }}
+          github_project_field: "Jira ticket ID" 
