--- a/.github/workflows/issue-chores.yml
+++ b/.github/workflows/issue-chores.yml
@@ -100,7 +100,7 @@ jobs:
                   }
                 }
               }
-            }' if node_id=context.payload.issue.node_id -f custom_field_name="Jira ticket ID" > project_data.json
+            }' -f node_id=context.payload.issue.node_id -f custom_field_name="Jira ticket ID" > project_data.json
           echo 'JIRA_TICKET_FIELD_VALUE='$(jq '.data.node.projectItems.nodes[] | .text' project_data.json) >> $GITHUB_ENV
 
       - name: Create a Security issue in the Support Jira
