Add missing declaration

--- a/.github/workflows/issue-chores.yml
+++ b/.github/workflows/issue-chores.yml
@@ -118,6 +118,7 @@ jobs:
               { issueId: context.payload.issue.node_id, projectField: securityProjectJiraField }
             )
             let securityTicket = ''
+            let securityProjectID = ''
             let securityProjectJiraFieldID = ''
             const securityProject = projectFields.node.projectItems.nodes.find(pi => pi.project.title === securityProjectName)
             if (securityProject !== undefined && securityProject.fieldValueByName !== null) {
